--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/ui-challenge-2/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Malaka - TailwindCSS Book</title>
-    <script type="module" crossorigin src="/index-25c324ba.js"></script>
-    <link rel="stylesheet" href="/index-e688fa7f.css">
+    <script type="module" crossorigin src="/ui-challenge-2/index-25c324ba.js"></script>
+    <link rel="stylesheet" href="/ui-challenge-2/index-e688fa7f.css">
   </head>
   <body>
     <div id="root"></div>
